# devsecops

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: cd.yml  ci.yml  security-scan.yaml
src/: config.py  main.py
src/models/: booking.py  event.py  user.py  users.py
src/routes/: auth.py  booking.py  bookings.py  events.py
src/services/: booking_service.py
src/utils/: auth.py
