# ─────────────────────────────────────────────────────────────
#  pyproject.toml  —  OWASP Juice Shop DevSecOps
# ─────────────────────────────────────────────────────────────

[tool.poetry]
name        = "juice-shop-devsecops"
version     = "1.0.0"
description = "OWASP Juice Shop — DevSecOps pipeline configuration"
authors     = ["your-name <you@email.com>"]
readme      = "README.md"
license     = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
httpx  = "0.27.0"       # fixed: removed invalid trailing "e"

[tool.poetry.group.dev.dependencies]
black  = "^24.0.0"
isort  = "^5.13.0"
flake8 = "^7.0.0"
bandit = "^1.7.0"       # SAST — security linter for Python
safety = "^3.0.0"       # SCA  — checks dependencies for CVEs

# ─── Black (code formatter) ──────────────────────────────────
[tool.black]
line-length    = 88
target-version = ["py311"]
exclude        = '''
/(
    \.git
  | \.venv
  | __pycache__
  | node_modules
  | dist
  | build
)/
'''

# ─── isort (import sorter) ───────────────────────────────────
[tool.isort]
profile     = "black"
line_length = 88
skip        = [".venv", "node_modules", "dist", "build"]

# ─── Bandit (security linter) ────────────────────────────────
[tool.bandit]
exclude_dirs = [".venv", "tests", "node_modules"]
severity     = "medium"   # flag medium & above
confidence   = "medium"

# ─── Build system ────────────────────────────────────────────
[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"